<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Education"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="My College"
            android:textSize="12sp"
            android:textColor="#aaa"
            />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/maharishi_logo"
                android:contentDescription="@string/college_image" />
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/maharishi_international_university"
                    />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/master_of_science_in_computer_science"
                    android:textSize="12sp"
                    android:textColor="#aaa"
                    />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/uef_logo"
                android:contentDescription="@string/uef_image" />
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/university_of_eastern_finland"
                    />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/impit_degree"
                    android:textSize="12sp"
                    android:textColor="#aaa"
                    />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/eec_logo"
                android:contentDescription="@string/eec_image" />
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/everest_engineering_college"
                    />
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bachelor_degree_name"
                    android:textSize="12sp"
                    android:textColor="#aaa"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>