<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_your_account"
        android:textColor="@color/material_dynamic_primary30"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_marginTop="80dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/sandeep_profile"
        app:civ_border_color="@color/material_dynamic_primary30"
        app:civ_border_overlay="true"
        app:civ_border_width="5dp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_text"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_photo">


        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/material_dynamic_primary30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:hint="@string/user_example_com"
            android:inputType="textEmailAddress"
            android:textColor="@color/material_dynamic_primary30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/material_dynamic_primary30"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/secret"
            android:textColor="@color/material_dynamic_primary30"
            android:autofillHints="password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/password_text"
            tools:ignore="LabelFor" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:paddingVertical="4dp"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/material_dynamic_primary30" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


