<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCareerItem"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.CVBuilder.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.CVBuilder.PopupOverlay" />


    </com.google.android.material.appbar.AppBarLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_item_title"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginBottom="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textSize="20sp"
                android:textColor="@color/material_dynamic_primary30"
                android:id="@+id/title_field"
                android:background="@drawable/text_view_border"
                android:padding="10dp"
                android:layout_marginBottom="30dp"
                android:autofillHints="name"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginBottom="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/details_field"
                android:textColor="@color/material_dynamic_primary30"
                android:hint="@string/add_details_here"
                android:gravity="top"
                android:padding="10dp"
                android:background="@drawable/text_view_border"
                android:textSize="20sp"
                android:layout_marginBottom="40dp"
                android:autofillHints="name"
                android:inputType="textMultiLine" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add"
                android:id="@+id/add_button"
                android:paddingVertical="4dp"
                android:layout_margin="10dp"
                android:textSize="30sp"
                android:background="@drawable/rounded_rectangle"
                android:backgroundTint="@color/material_dynamic_primary30" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>